--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "karis/timesheet-bundle",
     "type": "symfony-bundle",
-    "description": "Symfony KarisTimesheetBundle",
+    "description": "This bundle is ideal for small companies that need to have detailed information on who spends time and what they are doing in the projects",
     "keywords": ["Timesheet management", "timsheet", "symfony", "bundle"],
-    "homepage": "https://github.com/Zhamdi/KarisTimesheetBundle",
+    "homepage": "http://github.com/Zhamdi/KarisTimesheetBundle",
     "license": "MIT",
     "authors": [
         {
