--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.3.*",
-        "symfony/framework-bundle": "~2.3",
+        "sensio/framework-extra-bundle": "2.3",
     },
     "autoload": {
         "psr-0": { "Karis\\TimesheetBundle": "" }
