--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": ">=5.3.3",
         "symfony/symfony": "2.3.*",
         "sensio/framework-extra-bundle": "2.3",
+        "doctrine/orm": "~2.2,>=2.2.3",
     },
     "autoload": {
         "psr-0": { "Karis\\TimesheetBundle": "" }
