--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
     "require": {
         "php": ">=5.3.2",
     },
+    "repositories": [
+        {
+            "url": "https://github.com/Zhamdi/KarisTimesheetBundle.git"
+        },
+    ],
     "autoload": {
         "psr-0": { "Karis\\TimesheetBundle": "" }
     },
