--- a/composer.json
+++ b/composer.json
@@ -11,23 +11,14 @@
             "email": "hamdi.zayati@gmail.com"
         },
     ],
-    "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.2",
-        "symfony/framework-bundle": "~2.1",
-        "symfony/form": "~2.1",
-        "symfony/security-bundle": "~2.1"
-    },
-    "require-dev": {
-        "twig/twig": "~1.5",
-        "doctrine/doctrine-bundle": "*",
-        "swiftmailer/swiftmailer": ">=4.3, <6.0",
-        "willdurand/propel-typehintable-behavior": "dev-master",
-        "symfony/yaml": "~2.1",
-        "symfony/validator": "~2.1"
+        "php": ">=5.3.3",
+        "symfony/symfony": "2.3.*",
+        "symfony/framework-bundle": "~2.3",
     },
     "autoload": {
         "psr-0": { "Karis\\TimesheetBundle": "" }
     },
+    "minimum-stability": "dev",
     "target-dir": "Karis/TimesheetBundle"
 }
