--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
 before_script:
   - composer require symfony/framework-bundle:${SYMFONY_VERSION}
 
-script: phpunit --coverage-text
+script: phpunit --coverage-text app/
 
 notifications:
   email:
