--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,13 @@ php:
   - 5.5
 
 env:
-  - SYMFONY_VERSION=2.0.*
-  - SYMFONY_VERSION=2.1.*
-  - SYMFONY_VERSION=2.2.*
   - SYMFONY_VERSION=2.3.*
   - SYMFONY_VERSION=dev-master
 
 before_script:
   - composer require symfony/framework-bundle:${SYMFONY_VERSION}
 
-script: phpunit --coverage-text app
+script: phpunit -c app
 
 notifications:
   email:
