--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ env:
 
 before_script:
   - composer require symfony/framework-bundle:${SYMFONY_VERSION}
+  
+script: phpunit --coverage-text
 
 notifications:
   email:
