--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,6 +7,13 @@
             <directory suffix="Test.php">./Tests</directory>
         </testsuite>
     </testsuites>
+    <phpunit>
+    <!-- ... -->
+    <php>
+        <server name="KERNEL_DIR" value="Tests/Resources/app" />
+    </php>
+    <!-- ... -->
+    </phpunit>
     <!-- Quels fichiers sont concernés par l'évaluation du code coverage -->
     <filter>
         <whitelist>
