--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,11 @@ env:
 before_script:
   - composer require symfony/framework-bundle:${SYMFONY_VERSION}
   
-script: phpunit --coverage-text
+script: 
+  - phpunit --coverage-text
+  - phpunit --coverage-clover=coverage.clover
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --access-token="your-token" --format=php-clover coverag
 
 notifications:
   email:
